# cpplog

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_template.md
cmake/: cpp_flags.cmake  cpp_version.cmake  destdir.cmake  installdeps.cmake  vcpkg-builder.cmake
code/: CMakeLists.txt
code/cpplog/: CMakeLists.txt
code/cpplog/public/: log.hpp
code/cpplog/public/centor/: log.hpp
code/cpplog/public/centor/log/: conf.hpp  current_process_folder.hpp  default_logger.hpp  level.hpp  logger.hpp
code/cpplog/public/log/: conf.hpp  current_process_folder.hpp  default_logger.hpp  level.hpp  logger.hpp  warning_disabler.hpp
code/cpplog/src/centor/: default_logger.cpp
code/cpplog/src/centor/log/: current_process_folder.cpp  default_logger.cpp  logger.cpp
code/cpplog/src/log/: current_process_folder.cpp  default_logger.cpp  logger.cpp
code/cpplog/tests/: CMakeLists.txt
code/cpplog/tests/src/: cpp_log_tests.cpp  fixtures.cpp  fixtures.hpp
